[package]
name = "proc-lock-api"
description = "APIs for the proc-lock crate"
version = "0.3.0"
edition = "2021"
license = "MIT"
readme = "../README.md"
documentation = "https://docs.rs/proc-lock"
repository = "https://github.com/tabnine/proc-lock"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fs2 = "0.4.3"

[dev-dependencies]
spectral = "0.6.0"
