[package]
name = "proc-lock-macro"
description = "Macro API for the proc-lock crate"
version = "0.4.0"
edition = "2021"
license = "MIT"
readme = "../README.md"
documentation = "https://docs.rs/proc-lock"
repository = "https://github.com/tabnine/proc-lock"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quote = "1.0.5"
proc-macro2 = "1.0.12"
syn = { version = "1.0.40", features = ["full"] }
darling = "0.13.1"

proc-lock-api = { path = "../proc-lock-api", version = "0.4.0" }

[lib]
proc-macro = true
