[package]
name = "proclock-api"
description = "APIs for the proclock crate"
version = "0.1.1"
edition = "2021"
license = "MIT"
readme = "../README.md"
documentation = "https://docs.rs/proclock"
repository = "https://github.com/tabnine/proclock"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fs2 = "0.4.3"

[dev-dependencies]
spectral = "0.6.0"