[package]
name = "proclock-macro"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quote = "1.0.5"
proc-macro2 = "1.0.12"
syn = { version = "1.0.40", features = ["full"] }
darling = "0.13.1"
proclock-api = { path = "../proclock-api" }

[lib]
proc-macro = true