[package]
name = "proclock"
description = "A simple cross-process locking API"
version = "0.2.1"
edition = "2021"
license = "MIT"
readme = "../README.md"
documentation = "https://docs.rs/proclock"
repository = "https://github.com/tabnine/proclock"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proclock-macro = "0.1.2"
proclock-api = "0.1.2"
#proclock-macro = { path = "../proclock-macro" }
#proclock-api = { path = "../proclock-api" }
